fix card button overlapping card

--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ ul.menu-list-btns {
 
 .card-img-top {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
@@ -301,6 +301,8 @@ a:active {
     font-weight: bold;
     font-size: 20px;
   }
+
+
 
 
 }
